--- a/nginx.conf
+++ b/nginx.conf
@@ -16,12 +16,12 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json image/svg+xml;
 
     # Cache des assets
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot|webp)$ {
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot|webp|avif)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Routing Astro (SPA mode)
+    # Routing Astro (SPA/SSG)
     location / {
         try_files $uri $uri/ $uri.html /index.html =404;
     }
